# mhb-personal-util

./: README.md  config.json
.github/workflows/: release.yml
apps/: config-index.ts
apps/echo/: echo.bash  mhb-config.ts
apps/scripts/: fix-git-author-info.bash
apps/task_switch_alarm/: .gitignore  Cargo.toml  mhb-config.ts  task_switch_alarm.bash
apps/task_switch_alarm/src/: main.rs
config-builder/: config-interface.ts  main.ts  package-lock.json  package.json  tsconfig.json
configurations/gitignore/: rust-library
manager-app/: Cargo.toml
manager-app/src/: main.rs
manager-app/test/: config.json
scripts/: create-release-cygwin.bash  create-release-default.bash  install-to-home.bash
