[package]
name = "manager-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["cargo"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend"]
